[package]
name = "puppies"
version = "0.1.0"
authors = ["ssc <ssc@apache.org>"]

[[bin]]
name = "main"
path = "src/main.rs"
doc = false

[dependencies]
rand="0.3.13"
csv="0.15.0"
fnv="1.0.5"
scoped-pool="1"
bencher="0.1.3"

[[bench]]
name = "llr"
harness = false

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = false
debug-assertions = false